com/profile-header.less
.profile-header {
  background: #fff;
  height: 50px;
  border-bottom: 1px solid #eee;
  padding: 0 15px;

  .nav-link {
    display: inline-block;
    border-bottom: 2px solid transparent;
    font-weight: 500;
    height: 38px;
    line-height: 19px;
    width: 75px;
    padding: 5px 10px;
    text-align: center;
    color: gray;
    cursor: pointer;

    * {
      cursor: pointer;
    }

    .label {
      font-size: 11px;
      margin-bottom: 3px;
      display: block;
    }

    .value {
      font-size: 16px;
      margin-top: -4px;
    }

    &:hover,
    &.active {
      color: var(--theme-color);
      border-color: var(--theme-color);
    }
  }
}

